--- a/src/Styles/FuncBuilderBlk.css
+++ b/src/Styles/FuncBuilderBlk.css
@@ -13,3 +13,11 @@
 .input-block-type {
   width: fill-available;
 }
+
+.func-block {
+  width: 100px;
+  border: 2px solid green;
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
