--- a/src/HeaderTabs.module.css
+++ b/src/HeaderTabs.module.css
@@ -2,7 +2,7 @@
     padding-top: var(--mantine-spacing-sm);
     background-color: var(--mantine-color-gray-0);
     border-bottom: 1px solid var(--mantine-color-gray-2);
-    margin-bottom: 120px;
+    /*margin-bottom: 120px;*/
 }
 
 .mainSection {
