--- a/src/Styles/FuncBuilderBlk.css
+++ b/src/Styles/FuncBuilderBlk.css
@@ -1,6 +1,6 @@
 .func-builder-block {
   width: 100px;
-  border: 2px solid green;
+  border: 2px solid blue;
   display: flex;
   flex-direction: column;
   margin: 10px;
@@ -14,3 +14,44 @@
 .input-block-type {
   width: fill-available;
 }
+
+.func-builder-block {
+  width: auto;
+  height: 130px;
+}
+
+.block-type-desc {
+  width: 90%;
+}
+
+.block-remove {
+  width: 10%;
+}
+
+.block-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.solid-divider {
+  border-top: 3px solid #000;
+  width: 100%;
+}
+
+.connection-handle {
+  background-color: #000;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  position: absolute;
+  /*transform: translate(50px);*/
+  left: 0;
+}
+
+.block-container {
+  width: auto;
+  height: auto;
+  position: relative;
+}
+
