--- a/src/Styles/FuncBuilderBlk.css
+++ b/src/Styles/FuncBuilderBlk.css
@@ -35,8 +35,9 @@
 }
 
 .solid-divider {
-  border-top: 3px solid #000;
+  border-top: 1px solid #888;
   width: 100%;
+  margin: 5px 0px;
 }
 
 .connection-handle {
@@ -46,7 +47,6 @@
   border-radius: 50%;
   position: absolute;
   /*transform: translate(50px);*/
-  left: 0;
 }
 
 .block-container {
@@ -54,4 +54,27 @@
   height: auto;
   position: relative;
 }
+
+svg {
+  position: absolute;
+  left: 0;
+}
+
+.node-menu-trigger-line {
+  stroke: #000;
+  stroke-width: 2;
+}
+
+.node-menu-item {
+  font-size: 12px;
+  margin: 2px;
+  padding: 4px;
+}
+
+.node-menu-item a {
+  text-decoration: none;
+  color: #000; 
+}
+
+
 
