--- a/src/Styles/FuncBuilderBlk.css
+++ b/src/Styles/FuncBuilderBlk.css
@@ -41,12 +41,15 @@
 }
 
 .connection-handle {
-  background-color: #000;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
+  background-color: #aaa;
+  /*border-radius: 50%;*/
   position: absolute;
   /*transform: translate(50px);*/
+}
+
+
+.connection-handle-icon {
+  transform: translateY(-5px)
 }
 
 .block-container {
