--- a/src/Styles/FuncBuilderBlk.css
+++ b/src/Styles/FuncBuilderBlk.css
@@ -40,11 +40,16 @@
   margin: 5px 0px;
 }
 
-.connection-handle {
+.connection-handle-wrapper {
   background-color: #aaa;
   /*border-radius: 50%;*/
   position: absolute;
   /*transform: translate(50px);*/
+}
+
+.connection-handle {
+  width: 100%;
+  height: 100%;
 }
 
 
