--- a/src/Styles/FuncBuilderBlk.css
+++ b/src/Styles/FuncBuilderBlk.css
@@ -38,7 +38,6 @@
   /* width: 80%; */
 }
 
-
 .input-block-type-input .mantine-Input-wrapper,
 .output-block-type-input .mantine-Input-wrapper
 {
@@ -48,9 +47,23 @@
 
 .input-block-idx-input .mantine-Input-wrapper,
 .output-block-idx-input .mantine-Input-wrapper
- {
+{
   min-width: 50px;
   padding-left: 10px;
+}
+
+.func-block-func-name-select .mantine-Input-wrapper
+{
+  min-width: 190px;
+  /* max-width: 120px; */
+  word-wrap: break-word;
+  overflow: hidden;
+}
+
+.func-block-type-switch .mantine-Input-wrapper 
+{
+  max-width: 150px;
+  padding-top: 5px;
 }
 
 .func-builder-block {
