--- a/src/Components/Workspace/Workspace.module.css
+++ b/src/Components/Workspace/Workspace.module.css
@@ -2,5 +2,7 @@
     width: 100%;
     height: 100vh;
     background-size: 40px 40px;
+    overflow-x: scroll;
+    overflow-y: scroll;
     background-image: radial-gradient(circle, #000000 1px, rgba(0, 0, 0, 0) 1px);
 }
